# investment_assistant

./: .gitignore  README.md  pyproject.toml
investment_assistant/: __init__.py  app.py  database.py
