[tool.poetry]
name = "investment_assistant"
version = "0.1.0"
description = "AI-powered personal investment assistant."
authors = ["wanming <wanming.zhao@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "investment_assistant" }
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
openai = "^1.3.0"
yfinance = "^0.2.32"
pandas = "^2.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"